// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metatext snapshots Metatext: 0 1`] = `
<span
  className="typography-0-1-3 typography__7-0-1-10 metatext-0-1-2"
>
  Metatext test string
</span>
`;

exports[`metatext snapshots Metatext: 1 1`] = `
<p
  className="typography-0-1-15 typography__7-0-1-22 metatext-0-1-14"
  data-sketch-symbol="Metatext"
>
  Metatext test string
</p>
`;

exports[`metatext snapshots Metatext: 2 1`] = `
<span
  className="typography-0-1-27 typography__7-0-1-34 metatext-0-1-26"
>
  Metatext test string
</span>
`;
